feat(log):
- added swagger event log endpoint for view contract log
